various changes due to "findbugs" results
git-svn-id: file:///home/daniel/dev/gnuprolog/gnuprolog-mod.plaster.svn@75 c6d13eaa-423a-49d0-8e1d-62509e1234ed